Updated /model_parameters/ endpoint to rely on parameter information stored in model metadata YAML files
